# semantic_search

./: .gitignore  Cargo.toml  Makefile.toml  README.md  README.zh-CN.md
.github/workflows/: release-mcp.yml
docs/: DESIGN.md  INTEGRATIONS.md  MCP.md  OPENCODE.md  OPENCODE_INTEGRATION_DESIGN.md  SKILL_SEMANTIC_SEARCH.md
scripts/: package-mcp.ps1  package-mcp.sh
skill/: skill.md
src/: lib.rs  main.rs  manager.rs
src/common/: data.rs  file_service.rs  logger.rs  mod.rs  utils.rs
src/document_chunker/: chunker.rs  file.rs  mod.rs
src/document_chunker/symbol/: arkts.rs  c.rs  cangjie.rs  cpp.rs  kind.rs  mod.rs  pipeline.rs  ts.rs
src/embedding/: mod.rs  onnx.rs  utils.rs
src/index/: file_checker.rs  manager.rs  mod.rs  utils.rs  worker.rs
src/language/: language.rs
src/metrics/: data.rs  mod.rs  profiler.rs  timer.rs
src/storage/: manager.rs  mod.rs
src/storage/rdb/: schema.sql  sqlite.rs
src/storage/vector_db/: lancedb.rs
src/test/: utils.rs
src/tools/: cli.rs  mcp.rs  mcp_registry.rs  mod.rs  service.rs
tests/: mcp_e2e.rs
